--- a/index.html
+++ b/index.html
@@ -33,9 +33,36 @@
                 <li><a href="#projects" onclick="togglemenu()">Projects</a></li>
                 <li><a href="#contact" onclick="togglemenu()">Contact</a></li>
             </div>
+        </div>   
+    </nav>  
+    <section id="profile">
+        <div class="section__pic-container">
+            <img src="profile.jpg" alt="">
         </div>
-           
-    </nav>          
+        <div class="section__text">
+            <p class="section__text__p1">Hello,I'm</p>
+            <h1 class="title">
+                Vivek Reddy
+            </h1>
+            <p class="section__text__p2">
+                Frontend Developer
+            </p>
+            <div class="btn-container">
+                <button  class="btn btn-color-2" onclick="window.open('RESUME-vivekreddygollala.pdf')">
+                    Download CV
+                </button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">
+                Contact Info
+                </button>
+            </div>
+            <div id="socials-container">
+                <img src="linkedin.png" alt="My linkedin" class="icon" onclick="location.href='http://linkedin.com/'">
+                <img src="github.png" alt="My Github" class="icon" onclick="location.href='http://github.com/'">
+                
+            </div>
+        </div>
+
+    </section>        
     <script src="script.js"></script>
 </body>
 </html>
