--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p> 1 year <br /> Frontend Development Freelncing </p>
             </div>
             <div class="details-container">
               <img
@@ -100,17 +100,19 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>Bachelor of Technology<br />ComputerScience</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+               Blend of data analytics, programming, and web development expertise with significant experience in task optimization and
+                data processing.
+               Proficient in Python and experienced in multiple other programming languages, complemented by hands-on experience
+                with AI tools like PyTorch.
+               An adept tutor in programming, known for translating complex technical topics into actionable insights, and skilled in visual
+                data presentation.
+               Equipped with a solid foundation in data manipulation, visualization.
+
             </p>
           </div>
         </div>
@@ -123,6 +125,9 @@
       />
     </section>
     <section id="experience">
+
+
+
       <p class="section__text__p1">Explore My</p>
       <h1 class="title">Experience</h1>
       <div class="experience-details-container">
@@ -159,7 +164,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>SASS</h3>
+                  <h3>Flutter</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -199,7 +204,7 @@
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title"> Machine Learning </h2>
             <div class="article-container">
               <article>
                 <img
@@ -219,7 +224,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Node JS</h3>
+                  <h3> Python </h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -230,7 +235,31 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
+                  <div>
+                    <h3> PyTorch </h3>
+                    <p>Intermediate</p>
+                  </div>
+                </article>
+                <article>
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="Experience icon"
+                    class="icon"
+                  />
+                  <div>
+                    <div>
+                      <h3> Data Analytics </h3>
+                      <p>Intermediate</p>
+                    </div>
+                  </article>
+                  <article>
+                    <img
+                      src="./assets/checkmark.png"
+                      alt="Experience icon"
+                      class="icon"
+                    />
+                    <div>
+                  <h3>OpenCv</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -242,7 +271,7 @@
                 />
                 <div>
                   <h3>Git</h3>
-                  <p>Intermediate</p>
+                  <p>Versio Control</p>
                 </div>
               </article>
             </div>
@@ -377,6 +406,6 @@
       </nav>
       <p>Copyright &#169; 2023 Vivek Reddy. All Rights Reserved.</p>
     </footer>
-    <script src="script.js"></script>
+   <script src="script.js"></script>
   </body>
 </html>
