--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href=' https://github.com/VIVEKREDDYGOLLALA/sentiment-analyses-master' "
               >
                 Live Demo
               </button>
@@ -332,7 +332,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/VIVEKREDDYGOLLALA/sentiment-analyses-master'"
               >
                 Live Demo
               </button>
@@ -356,7 +356,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/VIVEKREDDYGOLLALA/sentiment-analyses-master'"
               >
                 Live Demo
               </button>
