--- a/index.html
+++ b/index.html
@@ -298,17 +298,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Open CV Learnings</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/VIVEKREDDYGOLLALA/OPENCV'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href=' https://github.com/VIVEKREDDYGOLLALA/sentiment-analyses-master' "
+                onclick="location.href='https://github.com/VIVEKREDDYGOLLALA/OPENCV'"
               >
                 Live Demo
               </button>
@@ -322,17 +322,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Hand Written Digit Recognisation</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/VIVEKREDDYGOLLALA/Digit-Recognition--main'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/VIVEKREDDYGOLLALA/sentiment-analyses-master'"
+                onclick="location.href='https://drive.google.com/file/d/1XkjOmDgZFPrHnRLtEoxw8ffXeIaRRlr1/view?usp=sharing'"
               >
                 Live Demo
               </button>
@@ -346,17 +346,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Sentiment Analysis On Movie Reviews</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/VIVEKREDDYGOLLALA/sentiment-analyses-master'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/VIVEKREDDYGOLLALA/sentiment-analyses-master'"
+                onclick="location.href='https://drive.google.com/file/d/1VEd5Mx588NtOrVERhxwjGB4nU4SU6Dlt/view?usp=sharing'"
               >
                 Live Demo
               </button>
